infrastructure/base/routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oe-ingress
  namespace: genetics
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: "molg-oe.labmed.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oe-frontend
            port:
              name: web
  tls:
  - secretName: labmed-tls
